updating brochure embed

--- a/docs/style.css
+++ b/docs/style.css
@@ -636,7 +636,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	background-image:url("img/lines-dl.png");
 }
 .bg-bth-banner-poster{
-	background-image:url('img/bth-banner-poster.jpg');
+	background-image:url("img/bth-banner-poster.jpg");
 }
 
 
