--- a/docs/style.css
+++ b/docs/style.css
@@ -39,9 +39,6 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 
 /* Sizes */
 
-.bloc-lg{
-	padding:100px 50px;
-}
 .bloc-md{
 	padding:50px;
 }
@@ -232,6 +229,12 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 	border-color:rgba(0,0,0,.3);
 }
 
+/* Row Margin Offsets */
+
+.voffset{
+	margin-top:30px;
+}
+
 /* Bloc text custom styling */
 
 #explained h1{
@@ -254,6 +257,14 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 }
 #questions p{
 	font-size: 20px;
+}
+#groups h1{
+	font-size: 46px;
+	line-height: 50px;
+}
+#groups p{
+	font-size: 18px;
+	line-height: 25px;
 }
 
 /* = NavBar
