--- a/docs/style.css
+++ b/docs/style.css
@@ -39,6 +39,9 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 
 /* Sizes */
 
+.bloc-lg{
+	padding:100px 50px;
+}
 .bloc-md{
 	padding:50px;
 }
@@ -147,6 +150,13 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 }
 .texture-darken::before{
 	background: rgba(0,0,0,0.5);
+}
+
+
+/* Background Effects */
+
+.b-parallax{
+	background-attachment:fixed;
 }
 
 
@@ -263,8 +273,12 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 	line-height: 50px;
 }
 #groups p{
-	font-size: 18px;
-	line-height: 25px;
+	line-height: 28px;
+	font-size: 20px;
+}
+#bloc-7 p{
+	font-size: 16px;
+	line-height: 20px;
 }
 
 /* = NavBar
@@ -648,6 +662,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .bg-bth-banner-poster{
 	background-image:url("img/bth-banner-poster.jpg");
+}
+.bg-groups-bg{
+	background-image:url('img/groups-bg.png');
 }
 
 
