--- a/docs/style.css
+++ b/docs/style.css
@@ -300,6 +300,10 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 	font-size: 28px;
 	line-height: 38px;
 }
+#commit h1{
+	line-height: 65px;
+	font-size: 55px;
+}
 #questions h1{
 	line-height: 65px;
 	font-size: 55px;
@@ -510,6 +514,10 @@ button{
 .btn-sq{
 	border-radius: 0px;
 }
+.btn-xl{
+	padding: 16px 40px;
+	font-size: 28px;
+}
 .btn .caret{
 	margin:0 0 0 5px}.dropdown a .caret{
 	margin:0 0 0 5px}.btn-dropdown .dropdown-menu .dropdown{
@@ -533,7 +541,30 @@ button{
 	border-radius:0 0 29px 29px;
 }
 
+/* = Dividers
+-------------------------------------------------------------- */
+.divider-h{
+	padding:20px 0;
+}
+.divider-h span{
+	display: block;
+	border-top:1px solid transparent;
+}
+.divider-half{
+	width: 50%;
+	margin: 0 auto;
+}
+.dropdown-menu .divider-h,.dropdown-menu .divider-half{
+	padding:0;
+}
 
+/* = Forms
+-------------------------------------------------------------- */
+
+.form-control{
+	border-color:rgba(0,0,0,.1);
+	box-shadow:none;
+}
 
 /* iFrame */
 
@@ -697,6 +728,14 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 /* Button colour styles */
 
+.btn-terra-cotta{
+	background:#EF7261;
+	color:#FFFFFF!important;
+}
+.btn-terra-cotta:hover{
+	background:#bf5b4e;
+	color:#FFFFFF!important;
+}
 .btn-steel-blue{
 	background:#497F9E;
 	color:#FFFFFF!important;
