--- a/docs/style.css
+++ b/docs/style.css
@@ -252,8 +252,8 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 	line-height: 65px;
 }
 #explained p{
-	line-height: 28px;
 	font-size: 20px;
+	line-height: 28px;
 }
 #bloc-3 p{
 	font-size: 20px;
@@ -262,40 +262,40 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 	font-size: 20px;
 }
 #respond h1{
-	line-height: 65px;
 	font-size: 55px;
+	line-height: 65px;
 }
 #respond h3{
-	line-height: 33px;
 	font-size: 30px;
+	line-height: 33px;
 }
 #respond p{
-	line-height: 28px;
 	font-size: 20px;
+	line-height: 28px;
 }
 #bloc-7 h3{
-	line-height: 50px;
 	font-size: 46px;
+	line-height: 50px;
 }
 #bloc-7 p{
 	font-size: 28px;
 	line-height: 38px;
 }
 #commit h1{
-	line-height: 65px;
 	font-size: 55px;
+	line-height: 65px;
 }
 #commit h3{
-	line-height: 33px;
 	font-size: 30px;
+	line-height: 33px;
 }
 #commit p{
-	line-height: 28px;
 	font-size: 20px;
+	line-height: 28px;
 }
 #questions h1{
-	line-height: 65px;
 	font-size: 55px;
+	line-height: 65px;
 }
 #questions h2{
 	font-size: 30px;
@@ -307,12 +307,12 @@ a,button{outline: none!important;} /* Prevent ugly blue glow on chrome and safar
 	font-size: 30px;
 }
 #groups h1{
-	line-height: 50px;
 	font-size: 55px;
+	line-height: 50px;
 }
 #groups p{
-	line-height: 38px;
 	font-size: 28px;
+	line-height: 38px;
 }
 
 /* = NavBar
@@ -788,7 +788,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	background-image:url("img/bth-banner-poster.jpg");
 }
 .bg-groups-bg{
-	background-image:url('img/groups-bg.png');
+	background-image:url("img/groups-bg.png");
 }
 
 
